<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SecondActivity">
    <LinearLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_dark"
        android:padding="18dp"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_menu"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_flutter_dash"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_search"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/secondTitle"
        style="@style/h1style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policies"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/policyDrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DropDown.Icon.Button"
        android:text="@string/policy"
        app:iconGravity="end"
        android:paddingVertical="18dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/secondTitle"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/productCategoryDrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DropDown.Icon.Button"
        android:text="@string/product_category"
        app:iconGravity="end"
        android:paddingVertical="18dp"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@+id/policyDrop"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/productOriginCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DropDown.Icon.Button"
        android:text="@string/origin_country"
        app:iconGravity="end"
        android:paddingVertical="18dp"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@+id/productCategoryDrop"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DropDown.Icon.Button"
        android:text="@string/brand"
        app:iconGravity="end"
        android:paddingVertical="18dp"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@+id/productOriginCountry"
        />
    <TextView
        android:id="@+id/secondSecondTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_policies"
        style="@style/h1style"
        app:layout_constraintTop_toBottomOf="@id/brand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finish_activity_btn"
        android:text="@string/export"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        app:cornerRadius="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/secondSecondTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        android:paddingVertical="18dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/statusBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="18dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_circle"
                    android:tint="@color/gray_dark"
                    tools:ignore="UseAppTint" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_circle"
                    android:tint="@color/gray_dark"
                    tools:ignore="UseAppTint" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_circle"
                    android:tint="@color/gray_dark"
                    tools:ignore="UseAppTint" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_circle"
                    android:tint="@color/gray"
                    tools:ignore="UseAppTint" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_circle"
                    android:tint="@color/gray"
                    tools:ignore="UseAppTint" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_circle"
                    android:tint="@color/gray"
                    tools:ignore="UseAppTint" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_circle"
                    android:tint="@color/gray"
                    tools:ignore="UseAppTint" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_circle"
                    android:tint="@color/gray"
                    tools:ignore="UseAppTint" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >
                <LinearLayout
                    android:paddingHorizontal="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country_of_origin"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_arrow_drop_down"/>
                </LinearLayout>
                <LinearLayout
                    android:paddingHorizontal="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_category"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_arrow_drop_down"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>